# qpeptide-finder-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.local.yml  entrypoint.sh  pyproject.toml
.github/workflows/: build-and-push-ecr.yml  ci.yml  deploy-ec2.yml  run-migrations.yml  test.yml
alembic/: env.py
alembic/versions/: 1d3884dbeb40_create_tables.py  20b3aba2ba6c_remove_timestamps_from_protein_peptide_.py  56e3897cf1af_initial_migration.py  6510e565808c_change_enums_to_strings.py  718ebad503d2_add_new_criteria.py  8fec523735fd_add_is_optional_to_criteria.py  98d81823a834_add_rank_to_peptide_table.py  9bbe7cd011b9_remove_unique_constraint_from_username.py  a48ffd902416_make_datetime_columns_timezone_aware.py  c9c9568a8353_add_digest_criteria_table.py  e618df5ee6cb_add_peptide_attributes.py  f64815afb635_update_digest_proteases_table_order_.py
app/: main.py
app/api/: __init__.py
app/api/routes/: __init__.py  criteria.py  digest.py  digest_job.py  health.py  users.py
app/core/: __init__.py  config.py  dependencies.py
app/db/: session.py
app/domain/: __init__.py  peptide.py  protein.py
app/enums/: __init__.py  amino_acids.py  digest_statuses.py  enums.py  proteases.py
app/helpers/: __init__.py  database.py  digest_route.py
app/middleware/: __init__.py  nginx_validator.py
app/models/: __init__.py  base.py  criteria.py  digest.py  digest_criteria.py  digest_proteases.py  peptide.py  peptide_criteria.py  peptides.py  protein.py  user.py
app/schemas/: __init__.py  digest.py  user.py
app/services/: __init__.py  criteria_evaluator.py
app/services/filters/: __init__.py  avoid_cysteine.py  avoid_flanking_cut_sites.py  avoid_methionine.py  base.py  contains_asn_gly_motif.py  contains_asp_pro_motif.py  contains_cysteine.py  contains_long_homopolymeric_stretch.py  contains_methionine.py  contains_missed_cleavage.py  contains_n_terminal_glutamine.py  flanking_amino_acids.py  has_flanking_cut_sites.py  lacking_flanking_amino_acids.py  no_asn_gly_motif.py  no_asp_pro_motif.py  not_unique.py  outlier_charge_state.py  outlier_hydrophobicity.py  outlier_length.py  outlier_pi.py  peptide_length.py  peptide_pi.py  unique_sequence.py
app/tasks/: __init__.py  digest_task.py
deploy/: docker-compose.prod.yml
deploy/nginx/: docker-entrypoint.sh  nginx.conf
tests/: conftest.py  test_health.py
tests/factories/: __init__.py  digest_factory.py  peptide_factory.py  protein_factory.py
tests/factories/domains/: __init__.py  peptide.py  protein.py
tests/factories/dto/: digest_factory.py  user_factory.py
tests/factories/models/: __init__.py  criteria_factory.py  digest_factory.py  peptide_criteria_factory.py  peptide_factory.py  protein_factory.py  user_factory.py
tests/integration_tests/: test_criteria_integration.py  test_digest_delete_integration.py  test_digest_get_integration.py  test_digest_get_peptides_integration.py  test_digest_integration.py  test_digest_job_integration.py  test_digest_list_integration.py  test_health_integration.py  test_security_integration.py  test_users_integration.py
tests/models/: test_models.py
tests/unit tests/: test_database_helpers.py  test_enums.py  test_peptide_domain.py  test_protein.py  test_protein_domain.py  test_users.py
tests/unit tests/domains/: test_peptide.py  test_protein.py
tests/unit tests/enums/: test_enums.py
(+26 files in other folders)
